# mp3-to-nbs

./: .gitignore  =9.0  README.md  index.html  launch.bat  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
python/: converter.py  requirements.txt  run_demucs.py
python/models/: task_result.py
python/stages/: beat_tracking.py  instrument_map.py  midi_processing.py  nbs_generator.py  nbt_exporter.py  pitch_detection.py  roformer_vocal.py  source_separation.py  timbre_classifier.py
python/utils/: audio_loader.py  note_quantizer.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: convert.rs  env.rs  fs_util.rs  mod.rs  nbt_export.rs
src-tauri/src/python/: runner.rs
src/components/: ConversionOptions.tsx  EnvSetupModal.tsx  FileDropZone.tsx  LanguageSwitcher.tsx  ProgressPanel.tsx  ResultPanel.tsx
src/components/ui/: badge.tsx  dialog.tsx  progress.tsx  separator.tsx  tabs.tsx
src/hooks/: useConversion.ts  useEnvironment.ts
src/i18n/: LanguageContext.tsx  translations.ts  types.ts
src/lib/: tauri.ts
src/pages/: ConvertPage.tsx  NbtExportPage.tsx  SettingsPage.tsx
src/types/: conversion.ts
