[package]
name = "mp3-to-nbs"
version = "1.0.0"
description = "MP3 to NBS Converter - Desktop App"
authors = ["mp3-to-nbs"]
edition = "2021"

[lib]
name = "mp3_to_nbs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "tauri-runtime-wry", "webview2-com", "custom-protocol", "compression"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
